--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,10 @@
             // suppress errors for missing 'import React' in files
            "react/react-in-jsx-scope": "off",
             // allow jsx syntax in js files (for next.js project)
-           "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }] //should add ".ts" if typescript project
+           "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], //should add ".ts" if typescript project
+            // vérifie si on a défini des PropTypes pour tous les props dans les composants React          
+           "react/prop-types": "off"
+
           
     }
 }
