--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,9 @@
             // allow jsx syntax in js files (for next.js project)
            "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], //should add ".ts" if typescript project
             // vérifie si on a défini des PropTypes pour tous les props dans les composants React          
-           "react/prop-types": "off"
+           "react/prop-types": "off",
+           // désactiver la règle multiline-ternary
+           "multiline-ternary": "off"
 
           
     }
